--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,6 +17,9 @@
         <li>
           <a asp-area="" asp-controller="CrossSiteScripting" asp-action="DemoTypeII">Malicious parameter is reflected back to the user</a>
         </li>
+        <li>
+          <a asp-area="" asp-controller="Cryptography" asp-action="Hash">Old hashing algorythm</a>
+        </li>
       </ul>
     </li>
   </ul>
